# visual_novel_recommendation_engine

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  WEB_README.md  build_web.sh  serve.sh
.github/workflows/: build-and-deploy.yml
docs/: index.html  index.js
src/: data.rs  lib.rs  main.rs  recommender.rs  wasm.rs
web/: index.html  index.js  vn_titles
