[package]
name = "visual_novel_recommendation_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"           # For CSV file handling
sprs = "0.11"         # Sparse matrix functionality
clap = { version = "4.4", features = ["derive"] }   # Command line argument parsing

[profile.release]
strip = true  # Automatically strip symbols from the binary.
