[package]
name = "visual_novel_recommendation_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3"           # For CSV file handling
sprs = "0.11"         # Sparse matrix functionality
clap = { version = "4.4", features = ["derive"] }   # Command line argument parsing
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileReader",
  "Blob",
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
